<resources>
    <string name="app_name">MoneyTracker</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="content_authority" translatable="false">com.loftschool.moneytracker</string>
    <string name="sync_account_type" translatable="false">moneytracker.loftschool.com</string>

    <string name="action_settings">Settings</string>

    <string name="menu_buy">Расходы</string>
    <string name="menu_category">Категории</string>
    <string name="menu_statistics">Статистика</string>
    <string name="menu_settings">Настройки</string>
    <string name="menu_quit">Выход</string>

    <string name="nav_header_mail">vodovozzz@inbox.ru</string>
    <string name="nav_header_user_name">Timur Vodovozov</string>

    <string name="expenses_fragment">Hello Fragments</string>

    <string name="add_expenses_activity">Hello!</string>

    <string name="expenses_button_cancel">Отмена</string>
    <string name="expenses_button_add">Добавить</string>

    <string name="expenses_editText_description">Наименование покупки</string>
    <string name="expenses_editText_prise">Введите стоимость</string>
    <string name="expenses_editText_date">Введите дату</string>
    <string name="expenses_toast_add">Покупка добавлена</string>
    <string name="expenses_toast_error">Сначала введите категорию</string>
    <string name="expenses_select_categories">Выберите категорию</string>
    <string name="expenses_warning">Заполните все поля</string>

    <string name="category_snackbar_massage">Это snackbar</string>

    <string name="search_title">Поиск</string>

    <string name="registration_title">Регистрация</string>
    <string name="registration_btn_registration">Регистрация</string>
    <string name="registration_btn_canсel">Отмена</string>
    <string name="registration_text_enter_login">Введите логин</string>
    <string name="registration_text_enter_password">Введите пароль</string>
    <string name="registration_text_error_login">Поле Login пустое</string>
    <string name="registration_text_error_password">Поле Пароль пустое</string>
    <string name="registration_text_error">Поля менее 5 символов</string>
    <string name="registration_internet_error">Нет интернет соединения</string>
    <string name="registration_server_status_busy_login_error">Login занят, введите другой login</string>
    <string name="registration_server_other_error">Произошла неизвестная ошибка</string>

    <string name="auth_title">Аутентификация</string>
    <string name="auth_btn_registration_ok">OK</string>
    <string name="auth_btn_new_registration">Регистрация нового пользователя</string>
    <string name="auth_server_status_wrong_login_error">Не правильно введен login</string>
    <string name="auth_server_status_wrong_password_error">Не правильно введен пароль</string>
    <string name="auth_server_status_error">Произошла ошибка сервера</string>
    <string name="auth_server_google_error">Вы не вошли с помощью Google+</string>

    <string name="contextual_action_bar_delete">Удалить</string>
    <string name="dialog_window_btn_ok">Ok</string>
    <string name="dialog_window_btn_cancel">Отмена</string>
    <string name="add_new_category">Введите название категории</string>

    <string name="statistic_text">Статистика по категориям</string>

    <string name="menu_title_text">Нажмите для оповещения</string>

    <!-- common -->
    <string name="pref_enable_notifications_default" translatable="false">true</string>
    <string name="pref_enable_notifications_true">Включено</string>
    <string name="pref_enable_notifications_false">Выключено</string>

    <!-- Global notifications -->
    <string name="pref_enable_notifications_key" translatable="false">enable_notifications</string>
    <string name="pref_enable_notifications_label">Обновление оповещения</string>

    <!-- Vibrate option -->
    <string name="pref_enable_vibrate_notifications_key" translatable="false">enable_vibrate_notifications</string>
    <string name="pref_enable_vibrate_notifications_label">Вибрация</string>

    <string name="pref_notification_section">Настройки оповещения</string>

    <!-- Sound option -->
    <string name="pref_enable_sound_notifications_key" translatable="false">enable_sound_notifications</string>
    <string name="pref_enable_sound_notifications_label">Звук</string>

    <!-- LED option -->
    <string name="pref_enable_led_notifications_key" translatable="false">enable_led_notifications</string>
    <string name="pref_enable_led_notifications_label">Световой индикатор</string>

    <!-- Foreground option -->
    <string name="pref_enable_foreground_notifications_key" translatable="false">enable_foreground_notifications</string>
    <string name="pref_enable_foreground_notifications_label">Сообщение оповещения на переднем плане</string>

    <!-- String for notification bar-->
    <string name="notification_message">Это оповещающее сообщение!</string>

</resources>
