<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:maxLength="7"
        android:inputType="numberDecimal"
        android:hint="@string/expenses_editText_prise"
        android:id="@+id/expense_prise"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/expense_prise"
        android:layout_centerHorizontal="true"
        android:maxLength="25"
        android:hint="@string/expenses_editText_description"
        android:id="@+id/expense_desc"/>
    <Spinner
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_alignStart="@+id/expense_desc"
        android:layout_below="@+id/expense_desc"
        android:layout_alignParentStart="true"
        android:entries="@array/categories"
        android:id="@+id/expense_cat"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="10"
        android:inputType="date"
        android:hint="@string/expenses_editText_date"
        android:layout_below="@+id/expense_cat"
        android:layout_alignParentStart="true"
        android:id="@+id/expenses_date"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="170dp"
        android:layout_below="@+id/expenses_date"
        android:orientation="horizontal">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/expenses_button_cancel"
            android:id="@+id/expenses_btn_cancel"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/expenses_button_add"
            android:id="@+id/expenses_btn_add"/>
    </LinearLayout>

</RelativeLayout>